2002-02-19  Kevin Breit  <mrproper@ximian.com>

	* C/config-cds.xml: Wrote the documentation for this.  Added to CVS.

	* C/config-html.xml: Fixed a typo that caused building to break.

	* C/control-center.xml: Added behavior and cds documentation to the list.

2002-02-15  Kevin Breit  <mrproper@ximian.com>

	* C/config-behavior.xml: Rewrote this for Gnome 2.

2002-02-11  Kevin Breit  <mrproper@ximian.com>

	* C/config-screensaver.xml: Finished documenting this.  The advanced tab is covered.  It could use some more revision, but oh well!  That is for the future.

2002-02-10  Kevin Breit  <mrproper@ximian.com>

	* C/config-screensaver.xml: Did a bit of work on this.  I still need to work on the advanced tab though.  I added the file to CVS.

2002-02-08  Kevin Breit  <mrproper@ximian.com>

	* C/config-mouse.xml: Updated for XML and the new user interface.

	* C/config-kbd.xml: Reworded things.
	Updated to be Gnome 2.0 ready.

	* C/config-hints.xml: Added to CVS

	* C/config-default-apps.xml: Added to CVS.  It's ready to go for XML.

	* C/control-center.xml: Changed this to use xml files instead of sgml

	* C/config-sound.xml: Added to CVS.  This is now XMLified with complete Gnome 2 documentation for the sound capplet.

	* C/control-center.xml: Added to CVS.  Should be XML valid.

	* C/control-center.sgml: Removed file from CVS.  Will be replacing shortly.