@@ -1,0 +1,119 @@
+<sect1 id="cfg-default-applications">
+  <title>Default Applications</title>
+  <sect2 id="cfg-default-applications-introduction">
+    <title>Introduction</title>
+    <para>
+      The <application>Default Applications</application> capplet
+      sets up some of the default programs to use for different
+      events.
+    </para>
+  </sect2>
+  <sect2 id="cfg-default-applications-txt-editor">
+    <title>Text Editor Defaults</title>
+    <para>
+      Your default text editor is used when a plain text file needs to
+      be opened for either viewing or editing.  
+      </para>
+    <para>
+      By default,
+      <application>gedit</application> is used as the text editor.
+      However, as text editors are installed, more options are added
+      to the <guilabel>Select an Editor</guilabel> pull-down
+      list. Once you've selected your text editor, click
+      <guibutton>OK</guibutton> to save your settings.
+    </para>
+    <para>
+      You can also set a custom editor when your desired editor isn't
+      in the pulldown menu.  You select the <guibutton>Custom
+      Editor</guibutton> radio button and enter the text editor name.
+      If you wish, you can have the editor open in a terminal window
+      by selecting the <guibutton>Start in Terminal</guibutton>
+      button.  Clicking <guibutton>Accepts Line Number</guibutton>
+      lets GNOME pass a line number to the editor so that you can
+      "warp" to a part of a file.
+    </para>
+  </sect2>
+  <sect2 id="cfg-default-applications-www">
+    <title>Web Browser Defaults</title>
+    <para>
+      Your default web browser is refered to when you click on a link
+      that directs to a web site.
+    </para>
+    <para>
+      By default, <application>Netscape 6/Mozilla</application> is
+      used to view HTML files.  However, as more browsers are
+      installed, more choices will become available to use.  Choose
+      your browser by selecting the right item in the <guilabel>Select
+      a Web Browser</guilabel> section.  Once you
+      have made your change, click <guibutton>OK</guibutton> to apply
+      your changes.
+    </para>
+    <para>
+      You can also specify a custom web browser to use by selecting
+      the <guibutton>Custom Web Browser</guibutton> radio button.
+      Enter the command to execute your browser in the
+      <guilabel>Command</guilabel> entry area.  By clicking
+      <guibutton>Start in Terminal</guibutton>, the application will
+      start in a termainal.  To do remote commands in
+      <application>Netscape</application> select the
+      <guibutton>Understands Netscape Remote Control</guibutton>
+      button.
+    </para>
+  </sect2>
+  <sect2 id="cfg-default-applications-hlp-view">
+    <title>Help Viewer Defaults</title>
+    <para>
+      The help browser is called when a help file is needed to be
+      displayed.  Help files are available normally through either the
+      <guibutton>Help</guibutton> button located in some windows or
+      the <guilabel>Help</guilabel> menu.
+    </para>
+    <para>
+      By default, two help browsers are located in the
+      <guilabel>Select a Viewer</guilabel> section:
+      <itemizedlist>
+	<listitem>
+	  <para>
+	    Gnome Help Browser ("GHB")
+	  </para>
+	</listitem>
+	<listitem>
+	  <para>
+	    Nautilus
+	  </para>
+	</listitem>
+      </itemizedlist>
+      You can change the default viewer by selecting an item in the
+      drop-down menu and click <guibutton>OK</guibutton>.
+    </para>
+    <para>
+      There is a possibility though that you will want to use a help
+      browser not included in the list.  Click the <guibutton>Custom
+      Help Viewer</guibutton> radio button and enter the command to
+      run in the <guilabel>Command</guilabel> field.  By clicking
+      <guibutton>Start in Terminal</guibutton>, the application will
+      start in a termainal.  The <guibutton>Accepts URLs</guibutton>
+      should normally be turned on, saying that it can dual as a web
+      browser.
+    </para>
+  </sect2>
+  <sect2 id="cfg-default-apps-terminal">
+    <title>Terminal Defaults</title>
+    <para>
+      Your terminal window will sometimes be brought up to execute
+      commands.  For example, if you select to have an application be
+      brought up in the console, the terminal defaults will be
+      called.  Numerous defaults for terminals exist; the default
+      being <application>Gnome Terminal</application>.  Select a
+      terminal from the list and click <guibutton>OK</guibutton>.
+    </para>
+    <para>
+      Sometimes, you may want to use a terminal which isn't listed in
+      the prelisted items.  Click <guibutton>Custom
+      Terminal</guibutton> and enter the command to run your terminal
+      in the <guilabel>Command</guilabel> section.  The <guilabel>Exec
+      Flag</guilabel> option says how to embed a program in the
+      terminal.  Click <guibutton>OK</guibutton> to apply your preferences.
+    </para>
+  </sect2>
+</sect1>
