@@ -1,0 +1,47 @@
+<sect1 id="config-sound">
+  <title>Sound</title>
+  <para>
+    <application>Gnome</application> uses a sound server to play
+    sounds.  Sometimes you want the sound server to start.
+  </para>
+  <para>
+    The <application>Sound</application> capplet in <application>Gnome
+    Control Center</application> configures the sound daemon's
+    behavior.
+  </para>
+  <sect2 id="config-sound-general">
+    <title>Sound Options</title>
+    <para>
+      You can choose to let the sound server startup when
+      <application>Gnome</application> starts up by selecting the
+      <guibutton>Enable sound server startup</guibutton>.
+    </para>
+    <para>
+      If you wish to use the sound server for events, you click the
+      <guibutton>Sounds for events</guibutton> button.  An event is
+      something like a mouse click or warning that could play a sound
+      for notification reasons.
+    </para>
+  </sect2>
+  <sect2 id="config-sound-events">
+    <title>Sound Events</title>
+    <para>
+      <application>Gnome</application> 2 allows you to configure the
+      sound events that are played.  This configuration takes place in
+      the <guilabel>Sound Events</guilabel> tab of the
+      <application>Sound Properites</application> applet.
+    </para>
+    <para>
+      The view is broken up into two halves.  On the left side, are
+      categories and the sound descriptions.  On the right side is the
+      file name of the audio file to play.
+    </para>
+    <para>
+      To change what file is played for any specific event, click on
+      the event to select it.  Click the browse button and select the
+      file you wish to use.  You should press the
+      <guibutton>Play</guibutton> button to make sure this is the
+      sound you want.  Press <guibutton>Apply</guibutton> to make your changes.
+    </para>
+  </sect2>
+</sect1>
