@@ -1,3 +1,9 @@
+2002-03-08  Kevin Breit  <mrproper@ximian.com>
+
+	* C/config-default-apps.xml: Added this file to CVS.
+
+	* C/config-sound.xml: Added this file to CVS.
+
 2002-02-19  Kevin Breit  <mrproper@ximian.com>
 
 	* C/config-cds.xml: Wrote the documentation for this.  Added to CVS.
